@@ -110,8 +110,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13429) Separate date and time in message sp-newimages-showfrom
 * (bug 13137) Allow setting 'editprotected' right separately from 'protect', 	 
   so groups may optionally edit protected pages without having 'protect' perms
-* Disallow deletion of big pages by means of moving a page to its title and using the
-  "delete and move" option.
+* Disallow deletion of big pages by means of moving a page to its title and
+  using the "delete and move" option.
 * (bug 13466) White space differences not shown in diffs
 * (bug 1953) Search form now honors namespace selections more reliably
 
@@ -141,6 +141,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13442) Missing pages in prop=langlinks and prop=extlinks are now 
   handled properly.
 * (bug 13444) Add description to list=watchlist
+* (bug 5745) Special:Whatlinkshere shows no more than 500 links through each
+  redirect
 
 === Languages updated in 1.13 ===
 
